# openforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build-release.yml  deploy-pages.yml
docs/: changelog.html  index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
scripts/hooks/: pre-commit
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/agent/: history.rs  manager.rs  mod.rs  parser.rs  provider.rs  types.rs
src-tauri/src/agent/parsers/: claude.rs  codex.rs  gemini.rs  generic_json.rs  goose.rs  mod.rs  plain_text.rs
src-tauri/src/db/: queries.rs  schema.rs
src-tauri/src/script/: runner.rs
src-tauri/src/terminal/: pty.rs
src-tauri/src/worktree/: checkpoint.rs  diff.rs  manager.rs  mod.rs
src/components/chat/: AssistantMessage.tsx  ChatInput.tsx  ChatSearchBar.tsx  ChatSearchContext.tsx  ChatView.tsx  HighlightText.tsx  SlashCommandMenu.tsx  StatusBar.tsx  SystemMessage.tsx  ToolCallBlock.tsx  UserMessage.tsx
src/components/command/: CommandPalette.tsx  FilePickerContent.tsx  HighlightMatch.tsx  WorkspaceSearchContent.tsx
src/components/common/: FileTypeIcon.tsx
src/components/editor/: ChangesOverview.tsx  (+4 more)
src/hooks/: useAgent.ts  useShortcut.ts  useTerminal.ts  useTheme.ts  useWorkspace.ts
src/lib/: addRepo.ts  cities.ts  fuzzySearch.ts  shortcuts.ts  tauri.ts
src/stores/: session.ts  tabs.ts  ui.ts  workspace.ts
src/styles/: globals.css
(+12 files in other folders)
